--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -120,6 +120,195 @@ jobs:
         echo "🚀 Application deployed successfully!"
         echo "🌐 Application URL: http://$ALB_DNS"
 
+    - name: Wait for service to be ready
+      run: |
+        echo "⏳ Waiting for service to be ready..."
+        sleep 30
+
+    - name: Health Check - Basic Connectivity
+      run: |
+        ALB_DNS=$(aws elbv2 describe-load-balancers \
+          --names takehome-eks-alb \
+          --query 'LoadBalancers[0].DNSName' \
+          --output text)
+        
+        echo "🔍 Testing basic connectivity to http://$ALB_DNS"
+        for i in {1..10}; do
+          if curl -f -s --max-time 10 "http://$ALB_DNS" > /dev/null; then
+            echo "✅ Basic connectivity test passed"
+            break
+          else
+            echo "⏳ Attempt $i/10 failed, retrying in 10 seconds..."
+            sleep 10
+          fi
+        done
+
+    - name: Health Check - Application Health Endpoint
+      run: |
+        ALB_DNS=$(aws elbv2 describe-load-balancers \
+          --names takehome-eks-alb \
+          --query 'LoadBalancers[0].DNSName' \
+          --output text)
+        
+        echo "🔍 Testing health endpoint at http://$ALB_DNS/health"
+        HEALTH_RESPONSE=$(curl -f -s --max-time 10 "http://$ALB_DNS/health" || echo "FAILED")
+        
+        if [ "$HEALTH_RESPONSE" = "FAILED" ]; then
+          echo "❌ Health check failed - service not responding"
+          exit 1
+        fi
+        
+        echo "✅ Health endpoint response:"
+        echo "$HEALTH_RESPONSE" | jq '.' || echo "$HEALTH_RESPONSE"
+        
+        # Verify health status
+        HEALTH_STATUS=$(echo "$HEALTH_RESPONSE" | jq -r '.status' 2>/dev/null || echo "unknown")
+        if [ "$HEALTH_STATUS" = "healthy" ]; then
+          echo "✅ Application is healthy"
+        else
+          echo "❌ Application health status: $HEALTH_STATUS"
+          exit 1
+        fi
+
+    - name: Health Check - Readiness Endpoint
+      run: |
+        ALB_DNS=$(aws elbv2 describe-load-balancers \
+          --names takehome-eks-alb \
+          --query 'LoadBalancers[0].DNSName' \
+          --output text)
+        
+        echo "🔍 Testing readiness endpoint at http://$ALB_DNS/ready"
+        READY_RESPONSE=$(curl -f -s --max-time 10 "http://$ALB_DNS/ready" || echo "FAILED")
+        
+        if [ "$READY_RESPONSE" = "FAILED" ]; then
+          echo "❌ Readiness check failed"
+          exit 1
+        fi
+        
+        echo "✅ Readiness endpoint response:"
+        echo "$READY_RESPONSE" | jq '.' || echo "$READY_RESPONSE"
+
+    - name: Health Check - API Endpoint
+      run: |
+        ALB_DNS=$(aws elbv2 describe-load-balancers \
+          --names takehome-eks-alb \
+          --query 'LoadBalancers[0].DNSName' \
+          --output text)
+        
+        echo "🔍 Testing API endpoint at http://$ALB_DNS/api"
+        API_RESPONSE=$(curl -f -s --max-time 10 "http://$ALB_DNS/api" || echo "FAILED")
+        
+        if [ "$API_RESPONSE" = "FAILED" ]; then
+          echo "❌ API endpoint check failed"
+          exit 1
+        fi
+        
+        echo "✅ API endpoint response:"
+        echo "$API_RESPONSE" | jq '.' || echo "$API_RESPONSE"
+
+    - name: Health Check - Load Balancer Target Health
+      run: |
+        echo "🔍 Checking ALB target group health..."
+        
+        # Get target group ARN
+        TARGET_GROUP_ARN=$(aws elbv2 describe-target-groups \
+          --names takehome-eks-tg \
+          --query 'TargetGroups[0].TargetGroupArn' \
+          --output text 2>/dev/null || echo "")
+        
+        if [ -z "$TARGET_GROUP_ARN" ] || [ "$TARGET_GROUP_ARN" = "None" ]; then
+          echo "⚠️  Could not find target group, checking by pattern..."
+          TARGET_GROUP_ARN=$(aws elbv2 describe-target-groups \
+            --query 'TargetGroups[?contains(TargetGroupName, `tg-`)].TargetGroupArn' \
+            --output text | head -1)
+        fi
+        
+        if [ -n "$TARGET_GROUP_ARN" ] && [ "$TARGET_GROUP_ARN" != "None" ]; then
+          echo "📊 Target Group ARN: $TARGET_GROUP_ARN"
+          
+          # Check target health
+          HEALTH_STATUS=$(aws elbv2 describe-target-health \
+            --target-group-arn "$TARGET_GROUP_ARN" \
+            --query 'TargetHealthDescriptions[0].TargetHealth.State' \
+            --output text 2>/dev/null || echo "unknown")
+          
+          echo "🏥 Target health status: $HEALTH_STATUS"
+          
+          if [ "$HEALTH_STATUS" = "healthy" ]; then
+            echo "✅ All targets are healthy"
+          else
+            echo "⚠️  Target health status: $HEALTH_STATUS"
+          fi
+        else
+          echo "⚠️  Could not determine target group health"
+        fi
+
+    - name: Health Check - ECS Service Status
+      run: |
+        echo "🔍 Checking ECS service status..."
+        
+        SERVICE_STATUS=$(aws ecs describe-services \
+          --cluster $ECS_CLUSTER \
+          --services $ECS_SERVICE \
+          --query 'services[0].status' \
+          --output text)
+        
+        RUNNING_COUNT=$(aws ecs describe-services \
+          --cluster $ECS_CLUSTER \
+          --services $ECS_SERVICE \
+          --query 'services[0].runningCount' \
+          --output text)
+        
+        DESIRED_COUNT=$(aws ecs describe-services \
+          --cluster $ECS_CLUSTER \
+          --services $ECS_SERVICE \
+          --query 'services[0].desiredCount' \
+          --output text)
+        
+        echo "📊 Service Status: $SERVICE_STATUS"
+        echo "📊 Running Tasks: $RUNNING_COUNT/$DESIRED_COUNT"
+        
+        if [ "$SERVICE_STATUS" = "ACTIVE" ] && [ "$RUNNING_COUNT" = "$DESIRED_COUNT" ]; then
+          echo "✅ ECS service is healthy"
+        else
+          echo "❌ ECS service is not healthy"
+          exit 1
+        fi
+
+    - name: Performance Test
+      run: |
+        ALB_DNS=$(aws elbv2 describe-load-balancers \
+          --names takehome-eks-alb \
+          --query 'LoadBalancers[0].DNSName' \
+          --output text)
+        
+        echo "🚀 Running performance test..."
+        
+        # Test response time
+        RESPONSE_TIME=$(curl -w "%{time_total}" -o /dev/null -s "http://$ALB_DNS/health" || echo "999")
+        echo "⏱️  Response time: ${RESPONSE_TIME}s"
+        
+        # Test multiple concurrent requests
+        echo "🔄 Testing concurrent requests..."
+        for i in {1..5}; do
+          curl -s "http://$ALB_DNS/api" > /dev/null &
+        done
+        wait
+        echo "✅ Concurrent request test completed"
+
+    - name: Deployment Summary
+      run: |
+        ALB_DNS=$(aws elbv2 describe-load-balancers \
+          --names takehome-eks-alb \
+          --query 'LoadBalancers[0].DNSName' \
+          --output text)
+        
+        echo "🎉 Deployment completed successfully!"
+        echo "🌐 Application URL: http://$ALB_DNS"
+        echo "🔗 Health Check: http://$ALB_DNS/health"
+        echo "🔗 API Endpoint: http://$ALB_DNS/api"
+        echo "📊 Monitoring Dashboard: https://console.aws.amazon.com/cloudwatch/home?region=us-east-1#dashboards:name=takehome-eks-dashboard"
+
     - name: Comment on PR
       if: github.event_name == 'pull_request'
       uses: actions/github-script@v7
@@ -134,17 +323,39 @@ jobs:
             comment.user.type === 'Bot' && comment.body.includes('🚀 Application deployed successfully!')
           );
           
+          const commentBody = `## 🚀 Deployment Successful!
+          
+          **Application URL:** ${{ steps.get-url.outputs.url }}
+          **Image:** ${{ steps.build-image.outputs.image }}
+          
+          ### ✅ Health Checks Passed
+          - ✅ Basic connectivity test
+          - ✅ Application health endpoint (/health)
+          - ✅ Readiness endpoint (/ready)
+          - ✅ API endpoint (/api)
+          - ✅ Load balancer target health
+          - ✅ ECS service status
+          - ✅ Performance test
+          
+          ### 📊 Monitoring
+          **CloudWatch Dashboard:** https://console.aws.amazon.com/cloudwatch/home?region=us-east-1#dashboards:name=takehome-eks-dashboard
+          
+          ### 🔗 Quick Links
+          - [Health Check](${{ steps.get-url.outputs.url }}/health)
+          - [API Endpoint](${{ steps.get-url.outputs.url }}/api)
+          - [Application](${{ steps.get-url.outputs.url }})`;
+          
           if (botComment) {
             await github.rest.issues.updateComment({
               owner: context.repo.owner,
               issue_number: context.issue.number,
               comment_id: botComment.id,
-              body: `🚀 Application deployed successfully!\n🌐 Application URL: ${{ steps.get-url.outputs.url }}\n📦 Image: ${{ steps.build-image.outputs.image }}`
+              body: commentBody
             });
           } else {
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               issue_number: context.issue.number,
-              body: `🚀 Application deployed successfully!\n🌐 Application URL: ${{ steps.get-url.outputs.url }}\n📦 Image: ${{ steps.build-image.outputs.image }}`
+              body: commentBody
             });
           }
