Fixing the PR comments issue.

--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -1,5 +1,10 @@
 name: Infrastructure Changes
 
+permissions:
+  contents: read
+  pull-requests: write
+  id-token: write
+
 on:
   push:
     branches: [ main, develop ]
