--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -1,5 +1,10 @@
 name: Deploy to ECS
 
+permissions:
+  contents: read
+  pull-requests: write
+  id-token: write
+
 on:
   push:
     branches: [ main, develop ]
